--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,21 @@
+/*Général*/
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+:root{
+    --pink:#fcc0ce;
+    --grey: #353533;
+    --grey2:#eaeaea;
+    --blue:#89c8fa;
+    --blue2:#c5e2f8;
+    --primary:#d5f0f8;
+    --green:#99e2d0;
+    --greenfont:#eafbff;
+    --background:#f6f6f6;
+}
 body {
     margin: 0;
+    width: 100%;
 }
 h1{
     font-size: 16px;
@@ -8,9 +24,9 @@ h1{
     font-size: 16px;
 }
 
-
 /*Header*/
 .header-container{
+    width: 100%;
     display: flex;
     flex-direction: column;
     height: 113px;
@@ -31,6 +47,7 @@ h1{
     color: #353535;
     align-content: center;
     left:20px;
+    display: none;
 }
 .header .logo{
     justify-content: center;
@@ -45,12 +62,12 @@ h1{
     align-items: center;
     justify-content: center;
     height: 50px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 19px;
     gap: 30px;
-    background-color:#eaeaea;
+    background-color: #f6f6f6;
+    background: linear-gradient(var(--grey), var(--grey2)25%);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Ombre */
 }
-
 
 /*Section Hero*/
 
