--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,6 @@
 /*Général*/
 *{
+    box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 :root{
@@ -10,7 +11,7 @@
     --blue2:#c5e2f8;
     --primary:#9356dc;
     --green:#99e2d0;
-    --greenfont:#eafbff;
+    --greenfont:#008766;
     --background:#f6f6f6;
 }
 body{
@@ -20,8 +21,23 @@ body{
 h1{
     font-size: 16px;
 }
+
 .fa-solid{
     font-size: 16px;
+}
+
+a{
+    color: inherit;
+    text-decoration: none;
+}
+
+.restaurants-title{
+    margin: 0;
+    font-size: 22px;
+}
+
+.card img{
+    object-fit: cover;
 }
 
 /*Header*/
@@ -108,14 +124,14 @@ h1{
     padding:20px;
 }
 .fonctionnement h1{
-    margin: 0;
+    margin-bottom:20px;
     font-size: 24px;
     font-weight: bold;
 }
 .steps {
   display: flex;
   flex-direction: column;
-  margin: 20px;
+  margin: 0;
   align-items: center;
   gap: 30px; /* espace entre les bulles */
 }
@@ -124,35 +140,42 @@ h1{
   display: flex;
   align-items: center;
   gap: 10px;
-  justify-content: center;
-  background: #f6f6f6;
-  border-radius: 20px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  padding: 8px 16px;
-  width: 100%; /* ajuste selon ton design */
-  height:72px ;
-  font-size: 16px;
-  font-weight:bold;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Ombre */
+  justify-content: flex-start;
+  min-width: 0;
+  width: 100%;
 }
 
 .step-number {
   background: #a855f7; /* violet */
   color: white;
   font-weight: bold;
-  width: 22px;
-  height: 22px;
+  width: 24px;
+  height: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
   font-size: 13px;
+  position: relative;
+  z-index: 2;
 }
 
 .step-content {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 8px;
+  background: #f6f6f6;
+  border-radius: 20px;
+  padding: 8px 16px;
+  width: 322px; /* ajuste selon ton design */
+  height:72px ;
+  font-size: 16px;
+  font-weight:bold;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Ombre */
+  position: relative;
+  z-index: 1;
+  margin-left: -22px;
 }
 
 .step-icon {
@@ -167,7 +190,85 @@ h1{
 }
 
 /*Section Restaurants*/
-.restaurant-cards img{
-    width: 100%;
+.restaurants {
+    width: 340px;
+    padding: 20px;
+    box-sizing: border-box;
 }
+
+.restaurants-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.restaurants-cards{
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+}
+
+.restaurants-cards .card {
+    position: relative;
+    display: inline-block;
+    border-radius: 20px;
+    background-color: white;
+    height: 250px;
+}
+
+
+.restaurants-cards img {
+  display: block;
+  max-width: 100%;
+  max-height: auto;
+  width: auto;
+  height: auto;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  object-fit:cover
+}
+
+.badge {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: var(--green);
+      color: var(--greenfont);
+      padding: 5px 10px;
+      font-size: 14px;
+      font-weight: bold;
+      border-radius: 5px;
+      text-transform: uppercase;
+}
+
+.card-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-txt{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.card-title{
+    font-size: 1.1em;
+    margin: 0;
+}
+
+.restaurants h3{
+    margin:0;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.restaurants p{
+    margin:0;
+    font-size: 17px;
+    font-weight: lighter;
+}
+
 /*Footer*/
