--- a/assets/styles.css
+++ b/assets/styles.css
@@ -22,20 +22,26 @@ body{
 }
 h1{
     font-size: 16px;
+    font-weight: 500;
+}
+.section-title{
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 0;
+  }
+p{
+    font-size: 18px;
+    font-weight: 200;
+    margin: 0;
 }
 
 .fa-solid{
-    font-size: 22px;
+    font-size: 16px;
 }
 
 a{
     color: inherit;
     text-decoration: none;
-}
-
-.restaurants-title{
-    margin: 0;
-    font-size: 22px;
 }
 
 .card img{
@@ -81,8 +87,6 @@ a{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    font-size: 16px;
-    font-weight: 500;
     gap: 17px;
     padding: 10px;
     background:#eaeaea;
@@ -102,8 +106,6 @@ a{
     width: 275px;
     height: 68px;
     text-align: center;
-    font-size: 24px;
-    font-weight: bold;
     margin: 0;
 }
 .hero p{
@@ -202,14 +204,6 @@ a{
     box-sizing: border-box;
 }
 
-.restaurants-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: 10px;
-}
-
 .restaurants-cards{
     display: flex;
     flex-direction: column;
@@ -270,40 +264,134 @@ a{
     font-weight: bold;
 }
 
-.card-subtitle{
-    margin:0;
-    font-size: 17px;
-    font-weight: lighter;
-}
 .fa-heart {
   font-size: 24px;
 }
 
 /*Footer*/
+
+footer{
+  background-color: black;
+  color:white;
+  padding: 20px;
+}
 .footer-container{
-    padding: 20px;
-    background: black;
-    color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 .footer-container img{
-    width: 139px;
-    height: 27px;
-    filter: invert(1) brightness(1.5);
-    padding-left: 10px;
+  width: 139px;
+  height: 27px;
+  align-self: left;
+  filter: invert(1) brightness(1.5);
+}
+.footer-links{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  text-align: left;
+}
+.footer-links p{
+  margin: 0;
+  font-size: 16px;
+}
+.footer-links p:has(i) {
+  font-weight: 500; /* Medium */
+}
+.footer-links i{
+  margin-right: 12px;
+  width: 12px;
+  height: 12px;
 }
 
-.footer-txt{
-    padding: 10px;
-}
-.footer-txt p{
-    display: flex;
-    gap: 10px;
-}
-.footer-txt i{
-    width: 24px;
-    height: 12px;
-}
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1200px) {
   /* Styles pour la version desktop */
+  section{
+    width: auto;
+  }
+  .header-container{
+    height: 146px;
+  }
+  .header{
+    box-shadow: none;
+    font-weight: 91px;
+  }
+  .location{
+    box-shadow: none;
+    font-weight: 50px;
+  }
+  .hero{
+    margin:0;
+    gap: 10px;
+  }
+  .hero .section-title{
+    font-size: 40px;
+    font-weight: bold;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+  }
+  
+  .hero p{
+    width: 100%;
+    font-size: 20px;
+  }
+  .steps{
+    display: flex;
+    flex-direction: row;
+    gap:30px;
+  }
+  .step{
+    width: auto;
+  }
+
+  .fonctionnement{
+    padding:50px 0 50px 180px;
+  }
+  .restaurants .section-title{
+    padding-left: 180px;
+  }
+  .restaurants-cards{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+    padding-left: 180px;
+    padding-right: 180px;
+  }
+   .card img{
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+  }
+  .footer-container {
+    flex-direction: row;               /* met logo + liens sur la même ligne */
+    align-items: flex-end;
+    justify-content: flex-end; 
+    height: 114px;
+    padding: 30px 25px 30px 25px;
+  }
+  .footer-container img{
+    margin-right: 40px; 
+    margin-left: 40px; 
+  }
+
+  .footer-links {
+    flex-direction: row;  
+    justify-content: flex-end;
+    align-items: baseline;
+    gap: 30px;                         /* espace entre les liens */
+  }
+
+  .footer__logo {
+    order: 1;        
+  }
+  .footer-links p:nth-child(2){
+    margin-right: 40px;
+  }
 }
+
+
