--- a/assets/styles.css
+++ b/assets/styles.css
@@ -200,7 +200,7 @@ a{
 
 /*Section Restaurants*/
 .restaurants {
-    margin: 20px;
+    margin: 0;
     box-sizing: border-box;
 }
 
@@ -341,14 +341,14 @@ footer{
   .steps{
     display: flex;
     flex-direction: row;
-    gap:30px;
+    gap: 20px;
   }
   .step{
     width: auto;
   }
 
   .fonctionnement{
-    padding:50px 0 50px 180px;
+    padding:50px 180px 50px 180px;
   }
   .restaurants .section-title{
     padding-left: 180px;
@@ -362,11 +362,23 @@ footer{
     padding-left: 180px;
     padding-right: 180px;
   }
-   .card img{
+  .restaurants-cards img {
     width: 100%;
     height: 180px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     object-fit: cover;
+    display: block;
   }
+  .restaurants-cards a { 
+    flex-grow: 1; 
+    flex-basis: 0;
+    min-width: 40%;
+  }
+  .card .purple{
+    color: #9356dc;
+  }
+
   .footer-container {
     flex-direction: row;               /* met logo + liens sur la même ligne */
     align-items: flex-end;
