--- a/SASS/app.scss
+++ b/SASS/app.scss
@@ -1,4 +1,380 @@
-$var:red;
-body{
-    background-color: $var;
+$pink : #fcc0ce;
+$grey: #353533;
+$grey2: #eaeaea;
+$blue: #89c8fa;
+$blue2: #c5e2f8;
+$primary: #9356dc;
+$green: #99e2d0;
+$greenfont: #008766;
+$background: #f6f6f6;
+
+/*Général*/
+*{
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+#body{
+    background: $background;
+    margin: 0;
+}
+#h1{
+    font-size: 16px;
+    font-weight: 500;
+}
+.section-title{
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 0;
+  }
+#p{
+    font-size: 18px;
+    font-weight: 200;
+    margin: 0;
+}
+.fa-solid{
+    font-size: 16px;
+}
+#a{
+    color: inherit;
+    text-decoration: none;
+}
+.card img{
+    object-fit: cover;
+}
+
+/*Header*/
+.header-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 113px;
+    .header{
+        display: flex;
+        flex-direction: row;
+        height: 67px;
+        align-items: center;
+        padding: 17px;
+        justify-content: center;
+        position: relative;
+        background-color: white;
+        box-shadow: 0px 4px 4px rgba(53, 53, 53, 0.25);
+        .fa-arrow-left {
+            position: absolute;
+            width: 30px;
+            height: 30px;
+            color: $grey;
+            align-content: center;
+            left:20px;
+            display: none;
+        }
+        .logo{
+            justify-content: center;
+            #img{
+                width: 197px;
+                height:36px;
+            }
+        }
+    }
+    .location{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 17px;
+        padding: 10px;
+        background:#eaeaea;
+        box-shadow: 0px 4px 4px rgba(53, 53, 53, 0.25);
+    }
+}
+
+/*Section Hero*/
+.hero{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    margin:30px;
+    background-color: transparent;
+    .section-title{
+        width: 275px;
+        height: 68px;
+        text-align: center;
+        margin: 0;
+    }
+    #p{
+        width: 315px;
+        height: 46px;
+        text-align: center;
+        margin-top: 0;
+    }
+    .btn-round{
+        width: 218px ;
+        height: 50px;
+        border: none;
+        border-radius: 30px;
+        background: linear-gradient(to top, #9356dc 0%, #ff79da 100%);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+        color: white;
+        font-size: medium;
+    }
+}
+
+/*Section Fonctionnement*/
+.fonctionnement{
+    background-color: white;
+    padding:20px;
+    .section-title{
+        margin-bottom:20px;
+        font-size: 24px;
+        font-weight: bold;
+        .steps {
+            display: flex;
+            flex-direction: column;
+            margin: 0;
+            align-items: center;
+            gap: 30px; /* espace entre les bulles */
+        }
+        .step {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            justify-content: center;
+            min-width: 0;
+            width: 100%;
+            .step-number {
+                background: #a855f7; /* violet */
+                color: white;
+                font-weight: bold;
+                width: 24px;
+                height: 24px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50%;
+                font-size: 13px;
+                position: relative;
+                z-index: 2;
+            }
+            .step-content {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 8px;
+                background: #f6f6f6;
+                border-radius: 20px;
+                padding: 8px 16px;
+                width: 322px; /* ajuste selon ton design */
+                height:72px ;
+                font-size: 16px;
+                font-weight:bold;
+                box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Ombre */
+                position: relative;
+                z-index: 1;
+                margin-left: -22px;
+                .fa-solid{
+                    width: 13px;
+                    height: 20px;
+                    object-fit: contain;
+                }
+                .step-text {
+                    font-size: 15px;
+                    color: #333;
+                }
+            }
+        }
+    }
+}
+
+/*Section Restaurants*/
+.restaurants {
+    margin: 0;
+    box-sizing: border-box;
+    .restaurants-cards{
+        display: flex;
+        flex-direction: column;
+        gap:20px;
+        .card {
+            display: flex;
+            flex-direction: column;
+            height: 251px;
+            background: white;
+            border-radius: 15px;
+            .image-container{
+                position: relative;
+                display: inline-block;
+                width: 100%;
+                height: 231px;
+                overflow: hidden;
+                justify-content: center;
+                #img {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    border-top-left-radius: 15px;
+                    border-top-right-radius: 15px;
+                    object-fit:cover
+                }
+                .badge {
+                    position: absolute;
+                    top: 10px;
+                    right: 10px;
+                    background-color: var(--green);
+                    color: var(--greenfont);
+                    padding: 5px 10px;
+                    font-size: 14px;
+                    font-weight: bold;
+                    border-radius: 5px;
+                }
+            }
+            .card-content{
+                .card-txt{
+                    padding:10px;
+                    .card-header{
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        .card-title{
+                            margin: 0;
+                            font-size: 18px;
+                            font-weight: bold;
+                        }
+                        .fa-regular{
+                            font-size: 24px;
+                            color: #9356dc;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+/*Footer*/
+
+.footer-container{
+    background-color: black;
+    color:white;
+    padding: 20px;
+    .footer{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        .footer__logo{
+            width: 139px;
+            height: 27px;
+            align-self: left;
+            filter: invert(1) brightness(1.5);
+        }
+        .footer-links{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            text-align: left;
+            #p{
+                margin: 0;
+                font-size: 16px;
+            }
+            #p:has(i) {
+                font-weight: 500; /* Medium */
+            }
+            #i{
+                margin-right: 12px;
+                width: 12px;
+                height: 12px;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+  /* Styles pour la version desktop */
+    section{
+        width: auto;
+        }
+
+    .header-container{
+        height: 146px;
+        .header{
+            box-shadow: none;
+            font-weight: 91px;
+        }
+        .location{
+            box-shadow: none;
+            font-weight: 50px;
+        }
+    }
+    .hero{
+        margin:0;
+        gap: 10px;
+        .section-title{
+            font-size: 40px;
+            font-weight: bold;
+            width: 100%;
+            text-align: center;
+            margin: 0;
+        }
+        #p{
+            width: 100%;
+            font-size: 20px;
+        }
+    }
+    .fonctionnement{
+        padding:50px 180px 50px 180px;
+        .steps{
+            display: flex;
+            flex-direction: row;
+            gap: 20px;
+            .step{
+                width: auto;
+            }
+        }
+    }
+    .restaurants{
+        .section-title{
+            padding-left: 180px;
+        }
+        .restaurants-cards{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 40px;
+            padding-left: 180px;
+            padding-right: 180px;
+            .card{
+                flex-grow: 1; 
+                flex-basis: 0;
+                min-width: 40%;
+                #img{
+                    width: 100%;
+                    height: 180px;
+                    border-top-left-radius: 20px;
+                    border-top-right-radius: 20px;
+                    object-fit: cover;
+                    display: block;
+                }
+            }           
+        }
+    }
+    .footer-container {
+        flex-direction: row;               /* met logo + liens sur la même ligne */
+        align-items: flex-end;
+        justify-content: flex-end; 
+        height: 114px;
+        padding: 30px 25px 30px 25px;
+        .footer__logo{
+            margin-right: 40px; 
+            margin-left: 40px; 
+            order: 1;
+        }
+        .footer-links {
+            flex-direction: row;  
+            justify-content: flex-end;
+            align-items: baseline;
+            gap: 30px;                         /* espace entre les liens */
+            #p:nth-child(2){
+                margin-right: 40px;
+            }
+        }
+    }
 }
