--- a/SASS/app.css
+++ b/SASS/app.css
@@ -189,6 +189,7 @@ a {
 .restaurants {
   margin: 0;
   box-sizing: border-box;
+  padding: 18px;
 }
 .restaurants .restaurants-cards {
   display: flex;
@@ -204,11 +205,9 @@ a {
 }
 .restaurants .restaurants-cards .card .image-container {
   position: relative;
-  display: inline-block;
   width: 100%;
   height: 231px;
   overflow: hidden;
-  justify-content: center;
 }
 .restaurants .restaurants-cards .card .image-container img {
   display: block;
@@ -230,22 +229,21 @@ a {
   font-weight: bold;
   border-radius: 5px;
 }
-.restaurants .restaurants-cards .card .card-content .card-txt {
+.restaurants .restaurants-cards .card .card-txt {
   padding: 10px;
 }
-.restaurants .restaurants-cards .card .card-content .card-txt .card-header {
+.restaurants .restaurants-cards .card .card-txt .card-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.restaurants .restaurants-cards .card .card-content .card-txt .card-header .card-title {
+.restaurants .restaurants-cards .card .card-txt .card-header .card-title {
   margin: 0;
   font-size: 18px;
   font-weight: bold;
 }
-.restaurants .restaurants-cards .card .card-content .card-txt .card-header .fa-regular {
+.restaurants .restaurants-cards .card .card-txt .card-header .fa-herat {
   font-size: 24px;
-  color: #9356dc;
 }
 
 /*Footer*/
@@ -259,7 +257,7 @@ a {
   flex-direction: column;
   gap: 10px;
 }
-.footer-container .footer .footer__logo {
+.footer-container .footer img {
   width: 139px;
   height: 27px;
   align-self: left;
@@ -276,7 +274,7 @@ a {
   font-size: 16px;
 }
 .footer-container .footer .footer-links p:has(i) {
-  font-weight: 500; /* Medium */
+  font-weight: 500;
 }
 .footer-container .footer .footer-links i {
   margin-right: 12px;
@@ -292,13 +290,11 @@ a {
   .header-container {
     height: 146px;
   }
-  .header-container .header {
+  .header {
     box-shadow: none;
-    font-weight: 91px;
   }
-  .header-container .location {
+  .location {
     box-shadow: none;
-    font-weight: 50px;
   }
   .hero {
     margin: 0;
@@ -316,10 +312,9 @@ a {
     font-size: 20px;
   }
   .fonctionnement {
-    padding: 50px 180px 50px 180px;
+    padding: 50px 180px;
   }
   .fonctionnement .steps {
-    display: flex;
     flex-direction: row;
     gap: 20px;
   }
@@ -330,7 +325,6 @@ a {
     padding-left: 180px;
   }
   .restaurants .restaurants-cards {
-    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
@@ -338,12 +332,7 @@ a {
     padding-left: 180px;
     padding-right: 180px;
   }
-  .restaurants .restaurants-cards .card {
-    flex-grow: 1;
-    flex-basis: 0;
-    min-width: 40%;
-  }
-  .restaurants .restaurants-cards .card img {
+  .restaurants .restaurants-cards img {
     width: 100%;
     height: 180px;
     border-top-left-radius: 20px;
@@ -352,6 +341,14 @@ a {
        object-fit: cover;
     display: block;
   }
+  .restaurants .restaurants-cards a {
+    flex-grow: 1;
+    flex-basis: 0;
+    min-width: 40%;
+  }
+  .restaurants .restaurants-cards .card .purple {
+    color: #9356dc;
+  }
   .footer-container {
     flex-direction: row; /* met logo + liens sur la même ligne */
     align-items: flex-end;
@@ -359,16 +356,15 @@ a {
     height: 114px;
     padding: 30px 25px 30px 25px;
   }
-  .footer-container .footer__logo {
+  .footer-container img {
     margin-right: 40px;
     margin-left: 40px;
-    order: 1;
   }
   .footer-container .footer-links {
     flex-direction: row;
     justify-content: flex-end;
     align-items: baseline;
-    gap: 30px; /* espace entre les liens */
+    gap: 30px;
   }
   .footer-container .footer-links p:nth-child(2) {
     margin-right: 40px;
