--- a/SASS/app.scss
+++ b/SASS/app.scss
@@ -41,8 +41,10 @@ a{
     color: inherit;
     text-decoration: none;
 }
-.card img{
-    object-fit: cover;
+.card {
+    img{
+        object-fit: cover;
+    }
 }
 
 .header, .location, .btn-round, .step-content {
@@ -192,23 +194,26 @@ a{
 .restaurants {
     margin: 0;
     box-sizing: border-box;
+    padding: 18px;
+
     .restaurants-cards{
         display: flex;
         flex-direction: column;
         gap:20px;
+
         .card {
             display: flex;
             flex-direction: column;
             height: 251px;
             background: white;
             border-radius: 15px;
+
             .image-container{
                 position: relative;
-                display: inline-block;
                 width: 100%;
                 height: 231px;
                 overflow: hidden;
-                justify-content: center;
+
                 img {
                     display: block;
                     width: 100%;
@@ -229,22 +234,22 @@ a{
                     border-radius: 5px;
                 }
             }
-            .card-content{
-                .card-txt{
-                    padding:10px;
-                    .card-header{
-                        display: flex;
-                        justify-content: space-between;
-                        align-items: center;
-                        .card-title{
-                            margin: 0;
-                            font-size: 18px;
-                            font-weight: bold;
-                        }
-                        .fa-regular{
-                            font-size: 24px;
-                            color: $primary;
-                        }
+            .card-txt{
+                padding:10px;
+
+                .card-header{
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+
+                    .card-title{
+                        margin: 0;
+                        font-size: 18px;
+                        font-weight: bold;
+                    }
+
+                    .fa-herat{
+                        font-size: 24px;
                     }
                 }
             }
@@ -252,34 +257,41 @@ a{
     }
 }
 
+
 /*Footer*/
 
 .footer-container{
     background-color: black;
     color:white;
     padding: 20px;
+
     .footer{
         display: flex;
         flex-direction: column;
         gap: 10px;
-        .footer__logo{
+
+        img{
             width: 139px;
             height: 27px;
             align-self: left;
             filter: invert(1) brightness(1.5);
         }
+
         .footer-links{
             display: flex;
             flex-direction: column;
             gap: 10px;
             text-align: left;
+
             p{
                 margin: 0;
                 font-size: 16px;
+
+                &:has(i) {
+                    font-weight: 500; 
+                }
             }
-            p:has(i) {
-                font-weight: 500; /* Medium */
-            }
+
             i{
                 margin-right: 12px;
                 width: 12px;
@@ -297,18 +309,20 @@ a{
 
     .header-container{
         height: 146px;
-        .header{
-            box-shadow: none;
-            font-weight: 91px;
-        }
-        .location{
-            box-shadow: none;
-            font-weight: 50px;
-        }
     }
+
+    .header{
+        box-shadow: none;
+    }
+
+    .location{
+        box-shadow: none;
+    }
+    
     .hero{
         margin:0;
         gap: 10px;
+
         .section-title{
             font-size: 40px;
             font-weight: bold;
@@ -316,47 +330,57 @@ a{
             text-align: center;
             margin: 0;
         }
+
         p{
             width: 100%;
             font-size: 20px;
         }
     }
+
     .fonctionnement{
-        padding:50px 180px 50px 180px;
+        padding:50px 180px;
+
         .steps{
-            display: flex;
             flex-direction: row;
             gap: 20px;
+
             .step{
                 width: auto;
             }
         }
     }
+
     .restaurants{
         .section-title{
             padding-left: 180px;
         }
+
         .restaurants-cards{
-            display: flex;
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
             gap: 40px;
             padding-left: 180px;
             padding-right: 180px;
-            .card{
+
+            img{
+                width: 100%;
+                height: 180px;
+                border-top-left-radius: 20px;
+                border-top-right-radius: 20px;
+                object-fit: cover;
+                display: block;
+            }
+
+            a{
                 flex-grow: 1; 
                 flex-basis: 0;
                 min-width: 40%;
-                img{
-                    width: 100%;
-                    height: 180px;
-                    border-top-left-radius: 20px;
-                    border-top-right-radius: 20px;
-                    object-fit: cover;
-                    display: block;
-                }
-            }           
+            } 
+            
+            .card .purple{
+                color:$primary;
+            }
         }
     }
     .footer-container {
@@ -365,16 +389,18 @@ a{
         justify-content: flex-end; 
         height: 114px;
         padding: 30px 25px 30px 25px;
-        .footer__logo{
+
+        img{
             margin-right: 40px; 
             margin-left: 40px; 
-            order: 1;
         }
+
         .footer-links {
             flex-direction: row;  
             justify-content: flex-end;
             align-items: baseline;
-            gap: 30px;                         /* espace entre les liens */
+            gap: 30px;  
+
             p:nth-child(2){
                 margin-right: 40px;
             }
