--- a/SASS/app.css
+++ b/SASS/app.css
@@ -37,8 +37,11 @@ a {
 }
 
 .card img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .header, .location, .btn-round, .step-content {
@@ -107,7 +110,7 @@ a {
   width: 315px;
   height: 46px;
   text-align: center;
-  margin-top: 0;
+  margin-top: 10px;
 }
 .hero .btn-round {
   width: 218px;
@@ -117,6 +120,7 @@ a {
   background: linear-gradient(to top, #9356dc 0%, #ff79da 100%);
   color: white;
   font-size: medium;
+  margin-top: 30px;
 }
 
 /*Section Fonctionnement*/
@@ -161,7 +165,7 @@ a {
 .fonctionnement .step .step-content {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   gap: 8px;
   background: #f6f6f6;
   border-radius: 20px;
@@ -177,19 +181,21 @@ a {
 .fonctionnement .step .step-content .fa-solid {
   width: 13px;
   height: 20px;
-  -o-object-fit: contain;
-     object-fit: contain;
+  margin: 20px;
 }
 .fonctionnement .step .step-content .step-text {
   font-size: 15px;
   color: black;
+}
+.fonctionnement .step .step-content .fa-store {
+  color: #9356dc;
 }
 
 /*Section Restaurants*/
 .restaurants {
   margin: 0;
   box-sizing: border-box;
-  padding: 18px;
+  padding: 50px 18px;
 }
 .restaurants .restaurants-cards {
   display: flex;
@@ -208,15 +214,6 @@ a {
   width: 100%;
   height: 231px;
   overflow: hidden;
-}
-.restaurants .restaurants-cards .card .image-container img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 .restaurants .restaurants-cards .card .image-container .badge {
   position: absolute;
@@ -242,25 +239,25 @@ a {
   font-size: 18px;
   font-weight: bold;
 }
-.restaurants .restaurants-cards .card .card-txt .card-header .fa-herat {
-  font-size: 24px;
+.restaurants .restaurants-cards .card .card-txt .card-header .fa-heart {
+  font-size: 22px;
+  font-weight: 200;
 }
 
 /*Footer*/
 .footer-container {
   background-color: black;
   color: white;
-  padding: 20px;
+  padding: 30px;
 }
 .footer-container .footer {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
 }
 .footer-container .footer img {
   width: 139px;
   height: 27px;
-  align-self: left;
   filter: invert(1) brightness(1.5);
 }
 .footer-container .footer .footer-links {
@@ -312,7 +309,7 @@ a {
     font-size: 20px;
   }
   .fonctionnement {
-    padding: 50px 180px;
+    padding: 50px 20px 180px;
   }
   .fonctionnement .steps {
     flex-direction: row;
@@ -332,15 +329,6 @@ a {
     padding-left: 180px;
     padding-right: 180px;
   }
-  .restaurants .restaurants-cards img {
-    width: 100%;
-    height: 180px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    -o-object-fit: cover;
-       object-fit: cover;
-    display: block;
-  }
   .restaurants .restaurants-cards a {
     flex-grow: 1;
     flex-basis: 0;
@@ -350,23 +338,28 @@ a {
     color: #9356dc;
   }
   .footer-container {
+    display: flex;
     flex-direction: row; /* met logo + liens sur la même ligne */
     align-items: flex-end;
     justify-content: flex-end;
     height: 114px;
     padding: 30px 25px 30px 25px;
   }
-  .footer-container img {
+  .footer-container .footer {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .footer-container .footer img {
     margin-right: 40px;
     margin-left: 40px;
   }
-  .footer-container .footer-links {
+  .footer-container .footer .footer-links {
     flex-direction: row;
     justify-content: flex-end;
     align-items: baseline;
     gap: 30px;
   }
-  .footer-container .footer-links p:nth-child(2) {
+  .footer-container .footer .footer-links p:nth-child(2) {
     margin-right: 40px;
   }
 }/*# sourceMappingURL=app.css.map */
