--- a/SASS/_index.scss
+++ b/SASS/_index.scss
@@ -46,6 +46,7 @@ a{
         display: block;
         width: 100%;
         height: 100%;
+        object-fit: cover;
         border-top-left-radius: 15px;
         border-top-right-radius: 15px;
     }
@@ -117,15 +118,21 @@ a{
         text-align: center;
         margin-top: 10px;
     }
-    .btn-round{
-        width: 218px ;
+    .btn-round {
+        width: 218px;
         height: 50px;
         border: none;
         border-radius: 30px;
-        background: linear-gradient(to top, $primary 0%, $pink2 100%);
         color: white;
         font-size: medium;
         margin-top: 30px;
+        cursor: pointer;
+        background: linear-gradient(to top, #9356dc 0%, #ff79da 100%);
+        transition: all 300ms ease;
+        &:hover{
+            filter: brightness(1.2);
+            box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.35);    
+        }
     }
 }
 
@@ -214,6 +221,7 @@ a{
             height: 251px;
             background: white;
             border-radius: 15px;
+            overflow: hidden;
 
             .image-container{
                 position: relative;
@@ -245,6 +253,16 @@ a{
                         margin: 0;
                         font-size: 18px;
                         font-weight: bold;
+                    }
+
+                    .btn-like{
+                        font-size: 0;
+                        cursor: pointer;
+                        transition-property: background;
+                        &:hover{
+                            background: linear-gradient(to top, $primary 0%, $pink2 50%);
+                        }
+
                     }
 
                     .fa-heart{
@@ -303,7 +321,10 @@ a{
 @media screen and (min-width: 1200px) {
   /* Styles pour la version desktop */
     section{
-        width: auto;
+        width: 100%;
+        max-width: 1440px;
+        margin: 0 auto;
+        box-sizing: border-box;
         }
 
     .header-container{
@@ -335,12 +356,15 @@ a{
             font-size: 20px;
         }
     }
-
     .fonctionnement{
-        padding:50px 20px 180px;
+        padding-left: 180px;
+        padding-right: 180px;
+        background-color: white;
+
 
         .steps{
             flex-direction: row;
+            justify-content: space-between;
             gap: 20px;
 
             .step{
@@ -350,17 +374,14 @@ a{
     }
 
     .restaurants{
-        .section-title{
-            padding-left: 180px;
-        }
-
+        padding-left: 180px;
+        padding-right: 180px;
+        
         .restaurants-cards{
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
             gap: 40px;
-            padding-left: 180px;
-            padding-right: 180px;
 
             a{
                 flex-grow: 1; 
