--- a/SASS/app.css
+++ b/SASS/app.css
@@ -40,6 +40,8 @@ a {
   display: block;
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
@@ -117,10 +119,16 @@ a {
   height: 50px;
   border: none;
   border-radius: 30px;
-  background: linear-gradient(to top, #9356dc 0%, #ff79da 100%);
   color: white;
   font-size: medium;
   margin-top: 30px;
+  cursor: pointer;
+  background: linear-gradient(to top, #9356dc 0%, #ff79da 100%);
+  transition: all 300ms ease;
+}
+.hero .btn-round:hover {
+  filter: brightness(1.2);
+  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.35);
 }
 
 /*Section Fonctionnement*/
@@ -208,6 +216,7 @@ a {
   height: 251px;
   background: white;
   border-radius: 15px;
+  overflow: hidden;
 }
 .restaurants .restaurants-cards .card .image-container {
   position: relative;
@@ -238,6 +247,14 @@ a {
   margin: 0;
   font-size: 18px;
   font-weight: bold;
+}
+.restaurants .restaurants-cards .card .card-txt .card-header .btn-like {
+  font-size: 0;
+  cursor: pointer;
+  transition-property: background;
+}
+.restaurants .restaurants-cards .card .card-txt .card-header .btn-like:hover {
+  background: linear-gradient(to top, #9356dc 0%, #ff79da 50%);
 }
 .restaurants .restaurants-cards .card .card-txt .card-header .fa-heart {
   font-size: 22px;
@@ -282,7 +299,10 @@ a {
 @media screen and (min-width: 1200px) {
   /* Styles pour la version desktop */
   section {
-    width: auto;
+    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+    box-sizing: border-box;
   }
   .header-container {
     height: 146px;
@@ -309,25 +329,27 @@ a {
     font-size: 20px;
   }
   .fonctionnement {
-    padding: 50px 20px 180px;
+    padding-left: 180px;
+    padding-right: 180px;
+    background-color: white;
   }
   .fonctionnement .steps {
     flex-direction: row;
+    justify-content: space-between;
     gap: 20px;
   }
   .fonctionnement .steps .step {
     width: auto;
   }
-  .restaurants .section-title {
+  .restaurants {
     padding-left: 180px;
+    padding-right: 180px;
   }
   .restaurants .restaurants-cards {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     gap: 40px;
-    padding-left: 180px;
-    padding-right: 180px;
   }
   .restaurants .restaurants-cards a {
     flex-grow: 1;
