--- a/SASS/_index.scss
+++ b/SASS/_index.scss
@@ -14,7 +14,7 @@ $shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 /*Général*/
 *{
     box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Roboto";
 }
 body{
     background: $background;
