--- a/SASS/app.css
+++ b/SASS/app.css
@@ -2,7 +2,7 @@
 /*Général*/
 * {
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Roboto";
 }
 
 body {
