Rajout lien Contant mailto

--- a/SASS/_index.scss
+++ b/SASS/_index.scss
@@ -391,7 +391,7 @@ a{
     }
     .footer-container {
         display: flex;
-        flex-direction: row;               /* met logo + liens sur la même ligne */
+        flex-direction: row;     
         align-items: flex-end;
         justify-content: flex-end; 
         height: 114px;
