--- a/SASS/restaurant.css
+++ b/SASS/restaurant.css
@@ -120,7 +120,7 @@ a {
 .main-container .carte .carte-details {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 12px;
   margin-top: 30px;
   width: 100%;
 }
@@ -207,4 +207,50 @@ a {
   margin-right: 12px;
   width: 12px;
   height: 12px;
+}
+
+@media screen and (min-width: 1020px) {
+  /* Styles pour la version desktop */
+  .main-container .image-container {
+    height: 383px;
+  }
+  .main-container .carte {
+    max-width: 1055px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .main-container .carte .restaurant-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .main-container .carte .carte-details {
+    max-width: 634px;
+  }
+  .footer-container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    height: 114px;
+    padding: 30px 25px 30px 25px;
+  }
+  .footer-container .footer {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .footer-container .footer img {
+    margin-right: 40px;
+    margin-left: 40px;
+  }
+  .footer-container .footer .footer-links {
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: baseline;
+    gap: 30px;
+  }
+  .footer-container .footer .footer-links p:nth-child(2) {
+    margin-right: 40px;
+  }
 }/*# sourceMappingURL=restaurant.css.map */
