--- a/SASS/app.css
+++ b/SASS/app.css
@@ -74,7 +74,6 @@ a {
   color: #353533;
   align-content: center;
   left: 20px;
-  display: none;
 }
 .header-container .header .logo {
   justify-content: center;
@@ -380,6 +379,244 @@ a {
     gap: 30px;
   }
   .footer-container .footer .footer-links p:nth-child(2) {
+    margin-right: 40px;
+  }
+}
+.restaurant-page {
+  /*Header*/
+  /*Footer*/
+}
+.restaurant-page h1 {
+  font-family: shrikhand;
+  font-size: 28px;
+  font-weight: 500;
+  font-style: italic;
+  margin: 0;
+}
+.restaurant-page h2 {
+  font-size: 16px;
+  font-weight: 200;
+  margin: 0;
+}
+.restaurant-page h3 {
+  font-size: 18px;
+  font-weight: 500;
+  margin: 0;
+}
+.restaurant-page .card-subtitle {
+  font-size: 15px;
+  font-weight: 200;
+  margin: 0;
+}
+.restaurant-page .card-price {
+  font-size: 15px;
+  font-weight: bold;
+  margin: 0;
+}
+.restaurant-page .fa-regular {
+  font-size: 22px;
+}
+.restaurant-page a {
+  color: inherit;
+  text-decoration: none;
+}
+.restaurant-page .header-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 67px;
+}
+.restaurant-page .header-container .header {
+  display: flex;
+  flex-direction: row;
+  height: 67px;
+  align-items: center;
+  padding: 17px;
+  justify-content: center;
+  position: relative;
+  background-color: white;
+}
+.restaurant-page .header-container .header .fa-arrow-left {
+  width: 30px;
+  height: 30px;
+  color: #353533;
+  align-content: center;
+}
+.restaurant-page .header-container .header .logo {
+  justify-content: center;
+}
+.restaurant-page .header-container .header .logo img {
+  width: 197px;
+  height: 36px;
+}
+.restaurant-page .main-container .image-container {
+  position: relative;
+  width: 100%;
+  height: 231px;
+  overflow: hidden;
+}
+.restaurant-page .main-container .image-container img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+  -o-object-position: center;
+     object-position: center;
+}
+.restaurant-page .main-container .carte {
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
+  background-color: #f6f6f6;
+  padding: 10px;
+  margin-top: -40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.restaurant-page .main-container .carte .restaurant-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 30px;
+  width: 100%;
+}
+.restaurant-page .main-container .carte .restaurant-title .btn-like {
+  border: none;
+  background: none;
+}
+.restaurant-page .main-container .carte .carte-details {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-top: 30px;
+  width: 100%;
+}
+.restaurant-page .main-container .carte .carte-details .section-title {
+  position: relative;
+}
+.restaurant-page .main-container .carte .carte-details .section-title::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 60px;
+  height: 4px;
+  background-color: #7fffd4;
+  border-radius: 2px;
+}
+.restaurant-page .main-container .carte .carte-details .card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  height: 69px;
+  padding: 15px;
+  background: white;
+  border-radius: 15px;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.25);
+}
+.restaurant-page .main-container .carte .carte-details .card .card-txt {
+  display: flex;
+  flex-direction: column;
+}
+.restaurant-page .main-container .carte .carte-details .card .card-price {
+  align-items: end;
+}
+.restaurant-page .main-container .btn-round {
+  width: 218px;
+  height: 50px;
+  border: none;
+  border-radius: 30px;
+  color: white;
+  font-size: medium;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-top: 30px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  background: linear-gradient(to top, #9356dc 0%, #ff79da 100%);
+  transition: all 300ms ease;
+}
+.restaurant-page .main-container .btn-round:hover {
+  filter: brightness(1.2);
+  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.35);
+}
+.restaurant-page .footer-container {
+  background-color: black;
+  color: white;
+  padding: 30px;
+}
+.restaurant-page .footer-container .footer {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.restaurant-page .footer-container .footer img {
+  width: 139px;
+  height: 27px;
+  filter: invert(1) brightness(1.5);
+}
+.restaurant-page .footer-container .footer .footer-links {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  text-align: left;
+}
+.restaurant-page .footer-container .footer .footer-links p {
+  margin: 0;
+  font-size: 16px;
+}
+.restaurant-page .footer-container .footer .footer-links p:has(i) {
+  font-weight: 500;
+}
+.restaurant-page .footer-container .footer .footer-links i {
+  margin-right: 12px;
+  width: 12px;
+  height: 12px;
+}
+@media screen and (min-width: 1020px) {
+  .restaurant-page {
+    /* Styles pour la version desktop */
+  }
+  .restaurant-page .main-container .image-container {
+    height: 383px;
+  }
+  .restaurant-page .main-container .carte {
+    max-width: 1055px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .restaurant-page .main-container .carte .restaurant-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .restaurant-page .main-container .carte .carte-details {
+    max-width: 634px;
+  }
+  .restaurant-page .footer-container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    height: 114px;
+    padding: 30px 25px 30px 25px;
+  }
+  .restaurant-page .footer-container .footer {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .restaurant-page .footer-container .footer img {
+    margin-right: 40px;
+    margin-left: 40px;
+  }
+  .restaurant-page .footer-container .footer .footer-links {
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: baseline;
+    gap: 30px;
+  }
+  .restaurant-page .footer-container .footer .footer-links p:nth-child(2) {
     margin-right: 40px;
   }
 }/*# sourceMappingURL=app.css.map */
